tests/fail_stable/missing_close_bracket.stderr
error: Expected '}' after '{'. Literal '{' need to be escaped as '{{'.  At "asdf{" <--
 --> $DIR/missing_close_bracket.rs:2:26
  |
2 |     sscanf::scanf!("hi", "asdf{asdf");
  |                          ^^^^^^^^^^^
